--- a/nx.json
+++ b/nx.json
@@ -128,7 +128,11 @@
     },
     "package-elements": {
       "tags": ["scope:elements", "type:library"],
-      "implicitDependencies": ["fluid-button", "fluid-checkbox", "fluid-tab"]
+      "implicitDependencies": [
+        "fluid-button",
+        "fluid-checkbox",
+        "fluid-tab-group"
+      ]
     },
     "alert": {
       "tags": ["scope:components", "type:library"]
