--- a/nx.json
+++ b/nx.json
@@ -358,7 +358,12 @@
     },
     "next": {
       "tags": ["scope:design-system", "type:app"],
-      "implicitDependencies": ["fluid-button"]
+      "implicitDependencies": [
+        "fluid-button",
+        "shared-data-access-strapi",
+        "shared-design-system-ui",
+        "shared-design-system-interfaces"
+      ]
     },
     "shared-data-access-strapi": {
       "tags": ["scope:cms", "type:shared", "type:library"]
